--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -8,47 +8,7 @@
    <!-- .resume-right -->
     <div class="col-md-6">
 
-        <!-- .title_content -->
-        <div class="title_content" style="float: none;">
-            <div class="text_content">Designs skills</div>
-            <div class="clear"></div>
-        </div>
-        <!-- /.title_content -->
         
-        <div class="skills">
-            <!-- .skillbar -->
-            <div class="skillbar clearfix" data-percent="95%">
-                <div class="skillbar-title"><span>Photoshop</span></div>
-                <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">95%</div>
-            </div>
-    
-            <!-- /.skillbar -->
-            
-            <!-- .skillbar -->
-            <div class="skillbar clearfix" data-percent="90%">
-                <div class="skillbar-title"><span>Illustrateur</span></div>
-                <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">90%</div>
-            </div>
-            <!-- /.skillbar -->
-            
-            <!-- .skillbar -->
-            <div class="skillbar clearfix" data-percent="65%">
-                <div class="skillbar-title"><span>Indesign</span></div>
-                <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">65%</div>
-            </div>
-            <!-- /.skillbar -->
-            
-            <!-- .skillbar -->
-            <div class="skillbar clearfix" data-percent="35%">
-                <div class="skillbar-title"><span>Flash</span></div>
-                <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">35%</div>
-            </div>
-            <!-- /.skillbar -->
-        </div>
         
         
         <!-- .title_content -->
@@ -61,7 +21,7 @@
         <div class="skills">
             <!-- .skillbar -->
             <div class="skillbar clearfix" data-percent="85%">
-                <div class="skillbar-title"><span>Wordpress</span></div>
+                <div class="skillbar-title"><span>HTML</span></div>
                 <div class="skillbar-bar"></div>
                 <div class="skill-bar-percent">85%</div>
             </div>
@@ -69,7 +29,7 @@
             
             <!-- .skillbar -->
             <div class="skillbar clearfix" data-percent="75%">
-                <div class="skillbar-title"><span>Joomla</span></div>
+                <div class="skillbar-title"><span>Java</span></div>
                 <div class="skillbar-bar"></div>
                 <div class="skill-bar-percent">75%</div>
             </div>
@@ -77,7 +37,7 @@
             
             <!-- .skillbar -->
             <div class="skillbar clearfix" data-percent="60%">
-                <div class="skillbar-title"><span>Drupal</span></div>
+                <div class="skillbar-title"><span>Javascript</span></div>
                 <div class="skillbar-bar"></div>
                 <div class="skill-bar-percent">60%</div>
             </div>
@@ -189,33 +149,27 @@
             <div class="skillbar clearfix" data-percent="90%">
                 <div class="skillbar-title"><span>English</span></div>
                 <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">90%</div>
+                <div class="skill-bar-percent">70%</div>
             </div>
             <!-- /.skillbar -->
             
             <!-- .skillbar -->
             <div class="skillbar clearfix " data-percent="80%">
-                <div class="skillbar-title"><span>French</span></div>
+                <div class="skillbar-title"><span>Korea</span></div>
                 <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">80%</div>
+                <div class="skill-bar-percent">99%</div>
             </div>
             <!-- /.skillbar -->
             
             <!-- .skillbar -->
             <div class="skillbar clearfix " data-percent="50%">
-                <div class="skillbar-title"><span>Spanish</span></div>
+                <div class="skillbar-title"><span>Japanese</span></div>
                 <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">50%</div>
+                <div class="skill-bar-percent">40%</div>
             </div>
             <!-- /.skillbar -->
             
-            <!-- .skillbar -->
-            <div class="skillbar clearfix " data-percent="60%">
-                <div class="skillbar-title"><span>Swiss</span></div>
-                <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">60%</div>
-            </div>
-            <!-- /.skillbar -->
+            
         </div>
         
         
@@ -226,11 +180,6 @@
         </div>
         <!-- /.title_content -->
         
-        <!-- .download_resume -->
-        <a class="download" style="margin:0;float: left;" href="#">
-            <span data-hover="Download My Resume"><i class="glyphicon glyphicon-download-alt"></i> Download My Resume</span>
-        </a>
-        <!-- /.download_resume -->
 
     </div>
      <!-- /.resume-right -->
@@ -249,15 +198,10 @@
         <!-- .attributes -->
         <ul class="attributes">
             <li class="first">
-                <h5>Web Developer <span class="duration"><i class="fa fa-calendar color"></i> 2011 - 2013</span></h5>
-                <h6><span class="fa fa-briefcase"></span> Name of Company</h6>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscingVivamus sit amet ligula non lectus cursus egestas. Cras erat lorem, fringilla quis sagittis in, sagittis inNam leo tortor Nam leo tortor Vivamus.</p>
-            </li>
-            <li>
-                <h5>Front-End Developer <span class="duration"><i class="fa fa-calendar color"></i> 2010 - 2011</span></h5>
-                <h6><span class="fa fa-briefcase"></span> Name of Company</h6>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscingVivamus sit amet ligula non lectus cursus egestas. Cras erat lorem, fringilla quis sagittis in, sagittis inNam leo tortor Nam leo tortor Vivamus.</p>
-            </li>
+                <h5>인턴 <span class="duration"><i class="fa fa-calendar color"></i> 2020.9 - 2023.12</span></h5>
+                <h6><span class="fa fa-briefcase"></span>효성ITX</h6>
+                <p>행정안전부에서 주관한 공공데이터 청년 인턴쉽에 참여하여 정선 소방서에서 화재 안전 정보 조사 결과 점검 및 데이터 현행화 직무를 수행하였다.</p>
+	     </li>
 
         </ul>
         <!-- /.attributes -->
@@ -274,87 +218,22 @@
         <ul class="attributes">
             <li class="first">
                 <h5>Master of Engineering <span class="duration"><i class="fa fa-calendar color"></i> 2011 - 2013</span></h5>
-                <h6><span class="fa fa-book"></span> Name of University</h6>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscingVivamus sit amet ligula non lectus cursus egestas. Cras erat lorem, fringilla quis sagittis in, sagittis inNam leo tortor Nam leo tortor Vivamus.</p>
-            </li>
-            <li>
-                <h5>Bachelor of Engineering <span class="duration"><i class="fa fa-calendar color"></i> 2010 - 2011</span></h5>
-                <h6><span class="fa fa-book"></span> Name of University</h6>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscingVivamus sit amet ligula non lectus cursus egestas. Cras erat lorem, fringilla quis sagittis in, sagittis inNam leo tortor Nam leo tortor Vivamus.</p>
+                <h6><span class="fa fa-book"></span>강릉원주대학교</h6>
+                <p>컴퓨터공학과에 재학하며 컴퓨터 시스템을 개발하고 제작하고, 컴퓨터를 효율적으로 이용하여 정보 산업을 육성할 수있는 실무자로서의 능력을 교육받았다.</p>
             </li>
         </ul>
         <!-- /.attributes -->
         <br>  
         
         
-          <!-- .title_content -->
-        <div class="title_content">
-            <div class="text_content">Awards</div>
-            <div class="clear"></div>
-        </div>
-        <!-- /.title_content -->
-        
-        <!-- .attributes -->
-        <ul class="attributes">
-            <li class="first">
-                <h5>Graphic &amp; Art Direction <span class="duration"><i class="fa fa-calendar color"></i> 2013 - 2014</span></h5>
-                <h6><span class="fa fa-trophy"></span> Name of Institute</h6>
-                <p>Emi Phasellus congue auctor risuspon, eget males. Pellentes que un imperdiet, odio quis orn sollicitud. Sed vitae lectus elementum mauris.</p>
-            </li>
-            <li>
-                <h5>Design &amp; Art Direction <span class="duration"><i class="fa fa-calendar color"></i> 2012 - 2013</span></h5>
-                <h6><span class="fa fa-trophy"></span> Name of Institute</h6>
-                <p>Emi Phasellus congue auctor risuspon, eget males. Pellentes que un imperdiet, odio quis orn sollicitud. Sed vitae lectus elementum mauris.</p>
-            </li>
-  
-        </ul>
-        <!-- /.attributes -->
+ 
         <br>  
         
     </div>
     <!-- /.resume-left -->
 </div>
 
-<div style="clear: both"></div>  
-  
-  
-<!-- client reference -->
-<div class="row">
-<div class="col-md-12">   
-    
-<div class="reference clearfix"> 
-            
-         <!-- .title_content -->
-        <div class="title_content" style="margin-bottom:5px">
-            <div class="text_content">Client reference</div>
-            <div class="clear"></div>
-        </div>
-        <!-- /.title_content -->
-        
 
-        <ul>
-            <li class="clearfix">
-                <img src="http://placehold.it/100x100" class="img_reference" width="100" height="100" alt="">
-                <p>“Many desktop publishing packages and web page editors now use Lorem Ipsum as their default will model text, and a search for 'lorem ipsum' hope is uncover many web sites still”</p>
-                <span>John Doe, UX Designer</span>
-            </li>
-            <li class="clearfix">
-                <img src="http://placehold.it/100x100" class="img_reference" width="100" height="100" alt="">
-                <p>“very nice colleague she always helped me out if i didnt know something editors now use Lorem Ipsum as their default”</p>
-                <span>Leia Calvi, UX Designer</span>
-            </li>
-            <li class="clearfix">
-                <img src="http://placehold.it/100x100" class="img_reference" width="100" height="100" alt="">
-                <p>“old colleague and now close friend, she is really sweet and helpfull packages and web page editors now use Lorem Ipsum as their default will model text”</p>
-                <span>Maria Callas, UX Designer</span>
-            </li>
-        </ul>
-</div>
-</div>
-
-     
-<div style="clear: both"></div>   
-</div>
 
 </div>
 <!-- End .resume -->
