--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -172,13 +172,7 @@
             
         </div>
         
-        
-        <!-- .title_content -->
-        <div class="title_content" style="float: none;">
-            <div class="text_content">My Resume</div>
-            <div class="clear"></div>
-        </div>
-        <!-- /.title_content -->
+  
         
 
     </div>
@@ -198,7 +192,7 @@
         <!-- .attributes -->
         <ul class="attributes">
             <li class="first">
-                <h5>인턴 <span class="duration"><i class="fa fa-calendar color"></i> 2020.9 - 2023.12</span></h5>
+                <h5>Intern<span class="duration"><i class="fa fa-calendar color"></i> 2020.9 - 2023.12</span></h5>
                 <h6><span class="fa fa-briefcase"></span>효성ITX</h6>
                 <p>행정안전부에서 주관한 공공데이터 청년 인턴쉽에 참여하여 정선 소방서에서 화재 안전 정보 조사 결과 점검 및 데이터 현행화 직무를 수행하였다.</p>
 	     </li>
