--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -2,7 +2,7 @@
 <div id="portfolio" class="content_2">
     
     <!-- .title -->
-    <h1 class="h-bloc">Portfolio - My Works</h1>
+    <h1 class="h-bloc">Portfolio - My Project</h1>
 
     <!-- .container-portfolio -->
     <div class="container-portfolio">
@@ -13,7 +13,7 @@
             <li><span class="filter" data-filter="catWeb">Web Design</span></li>
             <li><span class="filter" data-filter="catGraphic">Graphic Design</span></li>
             <li><span class="filter" data-filter="catMotion">Motion Graphic</span></li>
-            <li><span class="filter" data-filter="logo">Logo</span></li>
+            <li><span class="filter" data-filter="pi">Raspberry Pi</span></li>
         </ul>
         <!-- /#filters -->
 
@@ -21,15 +21,91 @@
         <div id="portfoliolist">
 
             <!-- .portfolio -->
-            <div class="portfolio logo" data-cat="logo">	
+            <div class="portfolio logo" data-cat="pi">	
                 <!-- .portfolio-wrapper -->
                 <div class="portfolio-wrapper">		
-                    <a href="images/portfolio/1.jpg" rel="portfolio" title="Lorem ipsum dolor sit amet, consectetur adipiscing Vivamus sit amet ligula non lectus.consectetur adipiscingVivamus sit amet">
-                        <img src="images/portfolio/1.jpg" alt="Visual Infography" />
+                    <a href="images/portfolio/1.png" rel="portfolio" title="Raspberry Pi1">
+                        <img src="images/portfolio/1.png" alt="Visual Infography" />
                         <div class="label">
                             <div class="label-text">
-                                <a class="text-title">Project Name</a>
-                                <span class="text-category">Logo</span>
+                                <a class="text-title">사물인터넷이 적용된 집 멀티 센서</a>
+                                <span class="text-category">Raspberry Pi</span>
+                            </div>
+                            <div class="label-bg"></div>
+                        </div>
+                    </a>
+                </div>
+                <!-- /.portfolio-wrapper -->
+            </div>		
+            <!-- /.portfolio -->
+            
+            <!-- .portfolio -->
+            <div class="portfolio logo" data-cat="pi">	
+                <!-- .portfolio-wrapper -->
+                <div class="portfolio-wrapper">		
+                    <a href="images/portfolio/2.png" rel="portfolio" title="Raspberry Pi1">
+                        <img src="images/portfolio/2.png" alt="Visual Infography" />
+                        <div class="label">
+                            <div class="label-text">
+                                <a class="text-title">사물인터넷이 적용된 집 멀티 센서</a>
+                                <span class="text-category">Raspberry Pi</span>
+                            </div>
+                            <div class="label-bg"></div>
+                        </div>
+                    </a>
+                </div>
+                <!-- /.portfolio-wrapper -->
+            </div>		
+            <!-- /.portfolio -->
+            
+            <!-- .portfolio -->
+            <div class="portfolio logo" data-cat="pi">	
+                <!-- .portfolio-wrapper -->
+                <div class="portfolio-wrapper">		
+                    <a href="images/portfolio/3.png" rel="portfolio" title="Raspberry Pi1">
+                        <img src="images/portfolio/3.png" alt="Visual Infography" />
+                        <div class="label">
+                            <div class="label-text">
+                                <a class="text-title">사물인터넷이 적용된 집 멀티 센서</a>
+                                <span class="text-category">Raspberry Pi</span>
+                            </div>
+                            <div class="label-bg"></div>
+                        </div>
+                    </a>
+                </div>
+                <!-- /.portfolio-wrapper -->
+            </div>		
+            <!-- /.portfolio -->
+            
+            <!-- .portfolio -->
+            <div class="portfolio logo" data-cat="pi">	
+                <!-- .portfolio-wrapper -->
+                <div class="portfolio-wrapper">		
+                    <a href="images/portfolio/4.jpg" rel="portfolio" title="Raspberry Pi1">
+                        <img src="images/portfolio/4.jpg" alt="Visual Infography" />
+                        <div class="label">
+                            <div class="label-text">
+                                <a class="text-title">사물인터넷이 적용된 집 멀티 센서</a>
+                                <span class="text-category">Raspberry Pi</span>
+                            </div>
+                            <div class="label-bg"></div>
+                        </div>
+                    </a>
+                </div>
+                <!-- /.portfolio-wrapper -->
+            </div>		
+            <!-- /.portfolio -->
+            
+            <!-- .portfolio -->
+            <div class="portfolio logo" data-cat="pi">	
+                <!-- .portfolio-wrapper -->
+                <div class="portfolio-wrapper">		
+                    <a href="images/portfolio/5.jpg" rel="portfolio" title="Raspberry Pi1">
+                        <img src="images/portfolio/5.jpg" alt="Visual Infography" />
+                        <div class="label">
+                            <div class="label-text">
+                                <a class="text-title">사물인터넷이 적용된 집 멀티 센서</a>
+                                <span class="text-category">Raspberry Pi</span>
                             </div>
                             <div class="label-bg"></div>
                         </div>
@@ -42,10 +118,10 @@
 
 
             <!-- .portfolio -->
-            <div class="portfolio catWeb" data-cat="catWeb">	
+            <div class="portfolio catWeb" data-cat="pi">	
                 <!-- .portfolio-wrapper -->
                 <div class="portfolio-wrapper">		
-                    <a href="http://www.youtube.com/watch?v=c9MnSeYYtYY" rel="portfolio">
+                    <a rel="portfolio">
 
                         <img src="images/portfolio/2.jpg" alt="Visual Infography" />
                         <div class="label">
