--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -59,7 +59,7 @@
                                         </div>
 
                                         <ul class="info">
-                                            <li><i class="glyphicon glyphicon-comment"></i> 2 Comments</li>
+                                            <li><i class="glyphicon glyphicon-comment"></i> 0 Comments</li>
                                             <li><i class="glyphicon glyphicon-time"></i> September 31, 2019</li>
                                             <li><i class="glyphicon glyphicon-user"></i> by Lee EunJeong</li>
                                             <li><i class="glyphicon glyphicon-tag"></i> RaspberryPi, IoT</li>
@@ -103,19 +103,19 @@
                                     <div class="top_c ">
 
                                         <div class="title_content">
-                                            <div class="text_content"><a href="#post-2" class="read_more">Blog Aside post</a></div>
+                                            <div class="text_content"><a href="#post-2" class="read_more">Cocoa Clone</a></div>
                                             <div class="clear"></div>
                                         </div>
 
                                         <ul class="info">
-                                            <li><i class="glyphicon glyphicon-comment"></i> 2 Comments</li>
-                                            <li><i class="glyphicon glyphicon-time"></i> January 31, 2014</li>
-                                            <li><i class="glyphicon glyphicon-user"></i> by Jane Doe</li>
-                                            <li><i class="glyphicon glyphicon-tag"></i> php, web design</li>
+                                            <li><i class="glyphicon glyphicon-comment"></i> 0 Comments</li>
+                                            <li><i class="glyphicon glyphicon-time"></i> January 31, 2020</li>
+                                            <li><i class="glyphicon glyphicon-user"></i> by Lee EunJeong</li>
+                                            <li><i class="glyphicon glyphicon-tag"></i> html, css, js</li>
                                         </ul>
 
                                         <div class="blog-content">
-                                            <p><i class="fa fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo...</p></div>
+                                            <p><i class="fa fa-quote-left"></i> html과 css를 이용하여 카카오톡 클론 코딩을 진행하였다. js를 이용하여 반응형 웹사이트를 제작한다...</p></div>
                                     </div>
                                 </div>	
 
@@ -215,13 +215,13 @@
                                             <div class="carousel-inner">
 
                                                 <div class="item active">
-                                                    <img src="images/blog/blog-1.gif" alt="">
+                                                    <img src="images/blog/blog-7.gif" alt="">
                                                 </div>
                                                 <div class="item">
-                                                    <img src="images/blog/blog-3.jpg" alt="">
+                                                    <img src="images/blog/blog-8.jpg" alt="">
                                                 </div>
                                                  <div class="item">
-                                                    <img src="images/blog/blog-4.jpg" alt="">
+                                                    <img src="images/blog/blog-9.jpg" alt="">
                                                 </div>
 
                              
@@ -235,26 +235,29 @@
 
 
                             <div class="title_content">
-                                <div class="text_content">사물 인터넷이 적용된 집 멀티 센서</div>
+                                <div class="text_content">Cocoa Clone</div>
                                 <div class="clear"></div>
                             </div>
 
-                            <p class="caps">라즈베리 파이를 활용한 사물 인터넷이 적용된 집 멀티 센서 구현하기. 일반 가정용 집을 미니어처로 구현한 후, 사물인터넷이 적용된 멀티 센서를 구현한다. 멀티 센서는 온습도 측정, 화재 감지, 조명 제어로 구성되며 이를 애플리케이션으로 작동시킨다. WebIOPi를 이용하여 서버를 이용하고, 앱 인벤터를 이용해 애플리케이션을 만들었다.</p>
+                            <p class="caps">html과 css를 이용하여 카카오톡 클론 코딩을 진행하였다. js를 이용하여 반응형 웹사이트를 제작한다. </p> <br>
+                            <a href = "je4469.github.io"> 코코아톡 구경가기 </a> <br>
+                            <p> 위 링크를 통해 이동하면 더욱 자세한 코코아톡을 체험해 볼 수 있다. </
+                          
                         
                            
                             <div class="col-md-12 first">
                                 <div class="info">
                                     <div>
-                                        <span class="tag">#RaspberryPi</span>
-                                        <span class="tag">#IoT</span>
+                                        <span class="tag">#KakaoTalk</span>
+                                        <span class="tag">#html</span>
                                     </div>
 
 
                                     <ul class="info-post">
-                                        <li><i class="glyphicon glyphicon-comment"></i> 2 Comments</li>
-                                        <li><i class="glyphicon glyphicon-time"></i> September 31, 2019</li>
+                                        <li><i class="glyphicon glyphicon-comment"></i> 0 Comments</li>
+                                        <li><i class="glyphicon glyphicon-time"></i> January 31, 2020</li>
                                         <li><i class="glyphicon glyphicon-user"></i> by Lee EunJeong</li>
-                                        <li><i class="glyphicon glyphicon-tag"></i> RaspberryPi, IoT</li>
+                                        <li><i class="glyphicon glyphicon-tag"></i> html, css, js</li>
                                     </ul>
                                 </div>
 
