--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -240,8 +240,8 @@
                             </div>
 
                             <p class="caps">html과 css를 이용하여 카카오톡 클론 코딩을 진행하였다. js를 이용하여 반응형 웹사이트를 제작한다. </p> <br>
-                            <a href = "je4469.github.io"> 코코아톡 구경가기 </a> <br>
-                            <p> 위 링크를 통해 이동하면 더욱 자세한 코코아톡을 체험해 볼 수 있다. </
+                            <a href = "je4469.github.io"> 코코아톡 구경가기 </a> <p> je4469.github.io </p>
+                            <p> 위 링크를 통해 이동하면 더욱 자세한 코코아톡을 체험해 볼 수 있다. </p>
                           
                         
                            
