--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -160,13 +160,13 @@
                                             <div class="carousel-inner">
 
                                                 <div class="item active">
-                                                    <img src="images/blog/blog-7.jpg" alt="">
+                                                    <img src="images/blog/blog-7.JPG" alt="">
                                                 </div>
                                                 <div class="item">
-                                                    <img src="images/blog/blog-8.jpg" alt="">
+                                                    <img src="images/blog/blog-8.JPG" alt="">
                                                 </div>
                                                  <div class="item">
-                                                    <img src="images/blog/blog-9.jpg" alt="">
+                                                    <img src="images/blog/blog-9.JPG" alt="">
                                                 </div>
 
                              
